--- a/api/package.json
+++ b/api/package.json
@@ -30,6 +30,7 @@
     "nodemon": "^2.0.20",
     "npm": "^6.14.6",
     "save": "^2.4.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "validator": "^13.7.0"
   }
 }
